# cargo-pretty-test

./: .gitignore  Cargo.toml  README.md  build.rs  cSpell.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: testing.yaml
src/: app.rs  doc.rs  fetch.rs  lib.rs  main.rs  parsing.rs  prettify.rs  regex.rs
tests/: golden_master_test.rs  mocking_project.rs  parsing.rs
tests/fixtures/: sample_cargo_test_output.txt
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs  main.rs
tests/integration/tests/: parsing.rs
