[package]
name = "cargo-pretty-test"
version = "0.1.0"
edition = "2021"
license = "MIT OR GPL-3.0"
authors = ["vague <jiping_zhou@foxmail.com>", "Jose Celano <josecelano@gmail.com>"]
description = "A console command to format cargo test output"
repository = "https://github.com/josecelano/pretty-test"

[dependencies]
termtree = "0.4"
regex-lite = "0.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
